<resources>
    <string name="app_name">SUU Nursing</string>

    <string name="title_section0">Vitals</string>
    <string name="title_section1">Subjective</string>
    <string name="title_section2">Objective</string>
    <string name="title_section3">Assessment</string>
    <string name="title_section4">Plan</string>

    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">DOB</string>
    <string name="status">Status</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>




    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="bmi">BMI:</string>
    <string name="bloodPressure">Blood Pressure:</string>
    <string name="temperature">Temperature:</string>
    <string name="pulse">Pulse:</string>
    <string name="resp_rate">Resp Rate:</string>
    <string name="in">in</string>
    <string name="lb">lb</string>
    <string name="slash">/</string>
    <string name="mm_hg">mm Hg</string>
    <string name="f">F</string>
    <string name="bmp">bmp</string>
    <string name="rpm">rpm</string>
    <string name="patient_summary">Patient Summary . . .</string>
    <string name="cc">Chief Complaint</string>
    <string name="pmh">Past Medical History</string>
    <string name="fmh">Family Medical History</string>
    <string name="sh">Social History</string>
    <string name="meds">Medications</string>
    <string name="ros">Review of Systems</string>

    <string name="general">General</string>
    <string name="HEENT">Head Eyes Ears Nose Throat</string>
    <string name="neck">Neck</string>
    <string name="cardiac">Cardiac</string>
    <string name="pulmonary">Pulmonary</string>
    <string name="abdominal">Abdominal</string>
    <string name="genitourinary">Genitourinary</string>
    <string name="musculoskeletal">Musculoskeletal</string>
    <string name="neurologic">Neurologic</string>
    <string name="integumentary">Integumentary</string>
    <string name="psychological">Psychological</string>
    <string name="labWork">Lab Work</string>
    <string name="imagingResults">Imaging Results</string>
    <string name="medicalDiagnosis">Medical Diagnosis</string>
    <string name="normal">Normal</string>
    <string name="strAlg">Allergies</string>


</resources>
