<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:focusable="true"
                android:focusableInTouchMode="true"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity$PlaceholderFragment"
    >


    <View
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#FF0000FF"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:stretchColumns="0,1,2,3,4,5,6,7"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vitals_titleRow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/height"
                android:id="@+id/textView"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/weight"
                android:id="@+id/textView3"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/bmi"
                android:id="@+id/textView2"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/bloodPressure"
                android:id="@+id/textView4"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/temperature"
                android:id="@+id/textView5"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pulse"
                android:id="@+id/textView6"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/resp_rate"
                android:id="@+id/textView7"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/vitals_inputRow">

            <RelativeLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="3"
                    android:id="@+id/heightEditText"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/in"
                    android:id="@+id/textView9"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/heightEditText"
                    android:layout_toEndOf="@+id/heightEditText"/>

            </RelativeLayout>

            <RelativeLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="3"
                    android:id="@+id/weightEditText"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lb"
                    android:id="@+id/textView10"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/weightEditText"
                    android:layout_toEndOf="@+id/weightEditText"/>

            </RelativeLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bmiEditText"
                android:layout_column="2"
                android:paddingRight="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="numberDecimal"
                android:text="0" />

            <RelativeLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="3"
                    android:id="@+id/bp1EditText"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/slash"
                    android:layout_toRightOf="@+id/bp1EditText"
                    android:layout_toEndOf="@id/bp1EditText"
                    android:id="@+id/textView11"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="3"
                    android:id="@+id/bp2EditText"
                    android:layout_toRightOf="@id/textView11"
                    android:layout_toEndOf="@id/textView11"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/mm_hg"
                    android:layout_toRightOf="@+id/bp2EditText"
                    android:layout_toEndOf="@+id/bp2EditText"
                    android:id="@+id/textView12"/>
            </RelativeLayout>

            <RelativeLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="3"
                    android:id="@+id/tempEditText"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/f"
                    android:layout_toRightOf="@+id/tempEditText"
                    android:layout_toEndOf="@+id/tempEditText"
                    android:id="@+id/textView13"/>

            </RelativeLayout>

            <RelativeLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="3"
                    android:id="@+id/pulseEditText"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bmp"
                    android:layout_toRightOf="@+id/pulseEditText"
                    android:layout_toEndOf="@+id/pulseEditText"
                    android:id="@+id/textView14"/>

            </RelativeLayout>

            <RelativeLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="3"
                    android:id="@+id/rrEditText"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rpm"
                    android:layout_toRightOf="@+id/rrEditText"
                    android:layout_toEndOf="@+id/rrEditText"
                    android:id="@+id/textView15"/>

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vitals_nameRow" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Student Name"
                android:id="@+id/vitals_studentName"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:id="@+id/vitals_studentNameEditText"
                android:layout_span="3"
                android:layout_marginRight="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Patient Name"
                android:id="@+id/patientName"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="-50dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:id="@+id/vitals_patientNameEditText"
                android:layout_span="2"
                android:layout_marginLeft="-60dp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/patient_summary"
        android:id="@+id/vitals_patientSummary"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentEnd="false" />

</RelativeLayout>
