<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:showDividers="middle"
        android:background="#ffc8c8c8"
        android:id="@+id/tableLayout1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:showDividers="middle"
            android:id="@+id/row_title"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/last_name"
                android:id="@+id/tv_last"
                android:textStyle="bold"
                android:textSize="35sp"
                android:width="250dp"
                android:singleLine="false"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/first_name"
                android:id="@+id/tv_first"
                android:textStyle="bold"
                android:textSize="35sp"
                android:width="250dp"
                android:singleLine="false"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gender"
                android:id="@+id/tv_gender"
                android:textStyle="bold"
                android:textSize="35sp"
                android:width="250dp"
                android:singleLine="false"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/date_of_birth"
                android:id="@+id/tv_dob"
                android:textStyle="bold"
                android:textSize="35sp"
                android:width="250dp"
                android:singleLine="false"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/status"
                android:id="@+id/tv_status"
                android:textStyle="bold"
                android:textSize="35sp"
                android:width="250dp"
                android:singleLine="false"
                android:gravity="center"/>
        </TableRow>


        <View android:layout_width="match_parent"
              android:layout_height="3dp"
              android:background="@android:color/black"/>
        </TableLayout>


<Button
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="New Button"
android:id="@+id/button"
android:onClick="TabbedView"
android:layout_column="2"/>

</LinearLayout>