<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffbbbbbb"
            android:id="@+id/subjective_grid"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/subjective_title1"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <TextView
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cc"
            android:id="@+id/subjective_cc"
            android:layout_column="0"
            android:textSize="30dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pmh"
            android:id="@+id/subjective_pmh"
            android:layout_column="2"
            android:textSize="30dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fmh"
            android:id="@+id/subjective_fmh"
            android:layout_column="4"
            android:textSize="30dp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/subjective_row1"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <EditText
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/subjective_cc_edittext"
            android:layout_column="0"
            android:background="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:nestedScrollingEnabled="true"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/subjective_pmh_edittext"
            android:layout_column="2"
            android:background="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:singleLine="false"
            android:nestedScrollingEnabled="true"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:inputType="textMultiLine|textAutoCorrect"
            android:ems="10"
            android:id="@+id/subjective_fmh_edittext"
            android:layout_column="4"
            android:background="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:nestedScrollingEnabled="true"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/subjective_title2"
        android:paddingRight="60dp"
        android:paddingLeft="60dp">

        <TextView
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sh"
            android:id="@+id/subjective_sh"
            android:layout_column="0"
            android:textSize="30dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/meds"
            android:id="@+id/subjective_meds"
            android:layout_column="2"
            android:textSize="30dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ros"
            android:id="@+id/subjective_ros"
            android:layout_column="4"
            android:textSize="30dp"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/subjective_row2"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <EditText
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/subjective_sh_edittext"
            android:layout_column="0"
            android:background="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:nestedScrollingEnabled="true"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/subjective_meds_edittext"
            android:layout_column="2"
            android:background="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:nestedScrollingEnabled="true"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/subjective_ros_edittext"
            android:layout_column="4"
            android:background="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:nestedScrollingEnabled="true"/>
    </TableRow>

</TableLayout>